# Amon

./: AGENTS.md  CODING_GUIDE.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  SPEC_v1.1.3.md  TEST_GUIDE.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.sandbox_jobs/: config.yaml
audits/: taskgraph_v3_phase0_audit.md
docs/: artifacts_ingest_design.md  chat_context_root_cause_report.md  chat_ui_router_api_design.md  codex_cloud_environment_draft.md  frontend-architecture.md  graph-debug.md  mcp.md  migration_v3.md  observability_schema.md  phase5-second-split-instructions.md  policy.md  release-checklist.md  sandbox.md  sandbox_runner.md  skills.md  skills_duplicate_case.md  taskgraph2-spec.md  testing_continuation_guard.md  thread-cutover-plan.md  toolforge.md  ui-offline.md  ui-regression-graph-context.md  ui_gap.md
examples/: graph_v3_minimal.json
scripts/: anti_legacy_graph.sh  build_skill_archives.py  codex_cloud_maintenance.sh  codex_cloud_setup.sh  e2e_plan_run.sh  validate_all_v3_graphs.py  verify_usable.sh
tests/: mcp_stub_server.py  test_action_queue.py  test_agents_contract_doc.py  test_anti_legacy_graph_script.py  test_artifacts_golden.py  test_artifacts_parser.py  test_artifacts_safety.py  test_artifacts_store.py  test_artifacts_validators.py  test_auto_web_search.py  test_budget.py  test_chat_attachments.py  test_chat_cli.py  test_chat_continuation_flow.py  test_chat_continuation_guard.py  test_chat_router.py  test_chat_session_endpoint_behavior.py  test_chat_session_store.py  test_cli_artifacts.py  test_cli_automation.py  test_cli_graph_contract.py  test_cli_init_sandbox.py  test_cli_sandbox_run.py  test_cli_taskgraph2_engine.py  test_cli_tools_builtin.py  test_cli_ui.py  test_codex_cloud_env_scripts.py  test_command_executor.py  test_config_loader.py  test_config_system_prompt.py  test_daemon.py  (+98 more)
(+385 files in other folders)
