[project]
name = "amon"
version = "0.1.0"
description = "Amon local agent system CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Amon Contributors" }
]
dependencies = [
  "PyYAML>=6.0"
]

[project.scripts]
amon = "amon.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
amon = ["ui/*.html", "ui/*.css", "resources/skills/*.skill"]
