[project]
name = "amon"
version = "0.1.0"
description = "Amon local agent system CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Amon Contributors" }
]
dependencies = [
  "PyYAML==6.0.2",
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "tiktoken==0.9.0"
]

[project.scripts]
amon = "amon.cli:main"
amon-sandbox-runner = "amon_sandbox_runner.app:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
amon = ["ui/*.html", "ui/*.css", "ui/*.js", "resources/skills/*.skill"]
